Table users {
  id bigint [pk, increment]
  full_name varchar(100)
  email varchar(100) [unique]
  phone varchar(20)
  password varchar(255)
  role_id bigint
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table roles {
  id bigint [pk, increment]
  name varchar(50) [unique] // ADMIN, MANAGER, STAFF, CUSTOMER
}

Table permissions {
  id bigint [pk, increment]
  code varchar(100) [unique]
  name varchar(100)
}

Table role_permissions {
  id bigint [pk, increment]
  role_id bigint
  permission_id bigint
}

Table stores {
  id bigint [pk, increment]
  name varchar(100)
  address varchar(255)
  phone varchar(20)
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table store_users {
  id bigint [pk, increment]
  staff_id bigint
  store_id bigint
  position varchar(50) // MANAGER, CASHIER, BARISTA
  status varchar(20)
  created_at datetime
}

Table customer_addresses {
  id bigint [pk, increment]
  user_id bigint
  receiver_name varchar(100)
  receiver_phone varchar(20)
  address varchar(255)
  is_default boolean
  created_at datetime
  updated_at datetime
}

Table categories {
  id bigint [pk, increment]
  name varchar(100)
  description text
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table products {
  id bigint [pk, increment]
  category_id bigint
  name varchar(100)
  description text
  image_url varchar(255)
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table product_variants {
  id bigint [pk, increment]
  product_id bigint
  size varchar(20) // S, M, L
  price decimal(12,2)
  status varchar(20)
}

Table toppings {
  id bigint [pk, increment]
  name varchar(100)
  price decimal(12,2)
  status varchar(20)
}

Table product_toppings {
  id bigint [pk, increment]
  product_id bigint
  topping_id bigint
}

Table carts {
  id bigint [pk, increment]
  user_id bigint
  created_at datetime
  updated_at datetime
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint
  product_variant_id bigint
  quantity int
  note varchar(255)
}

Table cart_item_toppings {
  id bigint [pk, increment]
  cart_item_id bigint
  topping_id bigint
  quantity int
}

Table orders {
  id bigint [pk, increment]
  user_id bigint
  store_id bigint
  address_id bigint
  order_code varchar(50) [unique]
  order_type varchar(20) // DELIVERY, PICKUP, DINE_IN, TAKEAWAY
  status varchar(30) // PENDING, CONFIRMED, PREPARING, READY, COMPLETED, CANCELLED
  receiver_name varchar(100)
  receiver_phone varchar(20)
  delivery_address varchar(255)
  subtotal decimal(12,2)
  discount_amount decimal(12,2)
  total_amount decimal(12,2)
  note varchar(255)
  created_at datetime
  updated_at datetime
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint
  product_id bigint
  product_variant_id bigint
  product_name varchar(100)
  size varchar(20)
  unit_price decimal(12,2)
  quantity int
  total_price decimal(12,2)
  note varchar(255)
}

Table order_item_toppings {
  id bigint [pk, increment]
  order_item_id bigint
  topping_id bigint
  topping_name varchar(100)
  unit_price decimal(12,2)
  quantity int
  total_price decimal(12,2)
}

Table payments {
  id bigint [pk, increment]
  order_id bigint
  payment_method varchar(30) // CASH, MOMO, BANKING, CARD
  payment_status varchar(30) // UNPAID, PAID, FAILED, REFUNDED
  amount decimal(12,2)
  paid_at datetime
  created_at datetime
}

Table promotions {
  id bigint [pk, increment]
  code varchar(50) [unique]
  name varchar(100)
  discount_type varchar(20) // PERCENT, FIXED
  discount_value decimal(12,2)
  min_order_amount decimal(12,2)
  start_date datetime
  end_date datetime
  usage_limit int
  status varchar(20)
}

Table order_promotions {
  id bigint [pk, increment]
  order_id bigint
  promotion_id bigint
  discount_amount decimal(12,2)
}

/* Ingredient & Inventory */

Table suppliers {
  id bigint [pk, increment]
  code varchar(50) [unique]
  name varchar(100)
  contact_name varchar(100)
  phone varchar(20)
  email varchar(100)
  address varchar(255)
  tax_code varchar(50)
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table ingredient_categories {
  id bigint [pk, increment]
  code varchar(50) [unique]
  name varchar(100)
  description text
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table ingredients {
  id bigint [pk, increment]
  category_id bigint
  code varchar(50) [unique]
  name varchar(100)
  unit varchar(20) // gram, ml, piece
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table recipes {
  id bigint [pk, increment]
  product_variant_id bigint [unique]
  code varchar(50) [unique]
  name varchar(100)
  description text
  status varchar(20)
  created_at datetime
  updated_at datetime
}

Table recipe_ingredients {
  id bigint [pk, increment]
  recipe_id bigint
  ingredient_id bigint
  quantity decimal(12,2)
  unit varchar(20)
  created_at datetime
  updated_at datetime
}

Table goods_receipts {
  id bigint [pk, increment]
  supplier_id bigint
  store_id bigint
  created_by bigint
  receipt_code varchar(50) [unique]
  total_amount decimal(12,2)
  status varchar(20) // DRAFT, COMPLETED, CANCELLED
  note varchar(255)
  created_at datetime
  updated_at datetime
}

Table goods_receipt_items {
  id bigint [pk, increment]
  receipt_id bigint
  ingredient_id bigint
  quantity decimal(12,2)
  unit varchar(20)
  unit_price decimal(12,2)
  total_price decimal(12,2)
  created_at datetime
  updated_at datetime
}

Table stock_movements {
  id bigint [pk, increment]
  store_id bigint
  ingredient_id bigint
  movement_type varchar(20) // IN, OUT, ADJUSTMENT
  quantity decimal(12,2)
  unit varchar(20)
  reference_type varchar(30) // GOODS_RECEIPT, ORDER, MANUAL_ADJUSTMENT
  reference_id bigint
  note varchar(255)
  created_by bigint
  created_at datetime
  updated_at datetime
}

/* Relationships */

Ref: users.role_id > roles.id
Ref: role_permissions.role_id > roles.id
Ref: role_permissions.permission_id > permissions.id

Ref: store_users.staff_id > users.id
Ref: store_users.store_id > stores.id

Ref: customer_addresses.user_id > users.id

Ref: products.category_id > categories.id
Ref: product_variants.product_id > products.id

Ref: product_toppings.product_id > products.id
Ref: product_toppings.topping_id > toppings.id

Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.product_variant_id > product_variants.id
Ref: cart_item_toppings.cart_item_id > cart_items.id
Ref: cart_item_toppings.topping_id > toppings.id

Ref: orders.user_id > users.id
Ref: orders.store_id > stores.id
Ref: orders.address_id > customer_addresses.id

Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: order_items.product_variant_id > product_variants.id

Ref: order_item_toppings.order_item_id > order_items.id
Ref: order_item_toppings.topping_id > toppings.id

Ref: payments.order_id > orders.id

Ref: order_promotions.order_id > orders.id
Ref: order_promotions.promotion_id > promotions.id

Ref: ingredients.category_id > ingredient_categories.id

Ref: recipes.product_variant_id > product_variants.id
Ref: recipe_ingredients.recipe_id > recipes.id
Ref: recipe_ingredients.ingredient_id > ingredients.id

Ref: goods_receipts.supplier_id > suppliers.id
Ref: goods_receipts.store_id > stores.id
Ref: goods_receipts.created_by > users.id
Ref: goods_receipt_items.receipt_id > goods_receipts.id
Ref: goods_receipt_items.ingredient_id > ingredients.id

Ref: stock_movements.store_id > stores.id
Ref: stock_movements.ingredient_id > ingredients.id
Ref: stock_movements.created_by > users.id
